feature: Добавил возможность сохранять историю использования ip аддресов
